# Chicago-Trading-Competition-2024

./: .gitignore  LICENSE  README.md  req.txt  requirements.txt
case_1/: Case1_EDA.html  Case1_EDA.ipynb  Case1_Historical.csv  Case1_Historical_Amended.csv  bruh.py  case1_bot.py  case1_debugging.py  case_1_bot.py  case_1_bot_5050.py  case_1_bot_faulty.py  case_1_bot_js.py  case_1_bot_naive.py  case_1_bot_tianyi.py  case_1_bot_tianyi2.py  case_1_bot_tianyi3.py  case_1_pipo.py  params.py  pipo.py  prediction.py  preprocessing.py  run.py  template_EDA.ipynb  trading_strat.ipynb
case_2/: Case 2 Data 2024.csv  Case2_EDA.ipynb  allocate.py  allocate_2.py  allocate_final.py  allocate_variance.py  bestMark.py  case2_HMPPSO.py  case2_evolution.py  case2_genetic.py  case2_markowitz.py  case2_mostSharpe.py  case2_mvo.py  case2_mvoShort.py  case2_pamr.py  case2_pamrCOPY.py  case2_qts.py  case2_study.ipynb  jank.py  output.txt  portfolio_optimizer.ipynb  results.txt  sosad.py  test_dummy.py  test_mostSharpe_allocate.py  weights.csv
src/: case1_bot.py  case2_bot.py  eda.py  params.py
xchangelib-move_repo/: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
xchangelib-move_repo/src/xchangelib/: service_pb2.py  service_pb2_grpc.py  setup.py  xchange_client.py
xchangelib-move_repo/src/xchangelib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xchangelib-move_repo/src/xchangelib/docs/: requirements.txt
xchangelib-move_repo/src/xchangelib/docs/source/: api.rst  conf.py  usage.rst
xchangelib-move_repo/src/xchangelib/examples/: example_bot.py  requirements.txt
(+185 files in other folders)
